--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-A.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-A.vm
@@ -96,7 +96,7 @@ p.western {
       <td>INVOICE NO.: ${ctx.order.code}</td>
       <td>&nbsp;</td>
     </tr>
-	#set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
+	#set ($formattedOrderDate = $ctx.invoiceDate)
     <tr>
       <td>DATE: $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
@@ -135,7 +135,7 @@ p.western {
     </tr>
     <tr>
       <td width="60%">SHIP FROM: $!{ctx.warehouse}</td>
-      <td align="left">SHIP TO: ${ctx.order.deliveryAddress.formattedAddress}</td>
+      <td align="left">SHIP TO: $!{ctx.order.deliveryAddress.formattedAddress}</td>
     </tr>
     <tr>
       <td>Terms: $!{ctx.paymentTerms} </td>
@@ -337,7 +337,7 @@ p.western {
     </tr>
     
     <tr>
-      <td>TO: ${ctx.customer.name} </td>
+      <td>TO: $!{ctx.customerCompany} </td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -345,7 +345,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Tel: $!{ctx.customer.defaultPaymentAddress.phone1}</td>
+      <td>Tel: $!{ctx.contactMobile}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
