--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-C.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-C.vm
@@ -90,14 +90,14 @@ p.western {
       <td>INVOICE NO.: ${ctx.order.code}</td>
       <td>&nbsp;</td>
     </tr>
-	#set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
+	#set ($formattedOrderDate = $ctx.invoiceDate)
     <tr>
       <td>DATE: $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
     </tr>
     
     <tr>
-      <td>TO: ${ctx.customer.name}</td>
+      <td>TO: $!{ctx.customerCompany}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -306,7 +306,7 @@ p.western {
     </tr>
     
     <tr>
-      <td>To: ${ctx.customer.name}</td>
+      <td>To: $!{ctx.customerCompany}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -314,7 +314,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Tel: $!{ctx.customer.defaultPaymentAddress.phone1}</td>
+      <td>Tel: $!{ctx.contactMobile}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
