--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
@@ -95,7 +95,7 @@ p.western {
       <td>INVOICE NO.: ${ctx.order.code}</td>
       <td>&nbsp;</td>
     </tr>
-	#set ($formattedOrderDate = $ctx.order.waitDeliveiedDate)
+	#set ($formattedOrderDate = $ctx.invoiceDate)
     <tr>
       <td>DATE: $!{formattedOrderDate}</td>
       <td>&nbsp;</td>
@@ -124,7 +124,7 @@ p.western {
     </tr>
     <tr>
       <td width="60%">SHIP FROM: $!{ctx.warehouse}</td>
-      <td align="left">SHIP TO: ${ctx.order.deliveryAddress.formattedAddress} </td>
+      <td align="left">SHIP TO: $!{ctx.order.deliveryAddress.formattedAddress} </td>
     </tr>
     <tr>
       <td>Payment terms: $!{ctx.paymentTerms}  </td>
@@ -327,7 +327,7 @@ p.western {
     </tr>
     
     <tr>
-      <td>TO: ${ctx.customer.name} </td>
+      <td>TO: $!{ctx.customerCompany} </td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -335,7 +335,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Tel: $!{ctx.customer.defaultPaymentAddress.phone1}</td>
+      <td>Tel: $!{ctx.contactMobile}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
