--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -344,15 +344,19 @@ textarea{
 /*maxpop*/
 .maxpop , .delpop,.maxfixed-bg{
 	display: none;
-	/*position: fixed;
+	position: fixed;
 	top:50%;
-	left:50%;*/
+	left:50%;
 	z-index: 999;
 	padding:20px 40px;
-	/*-webkit-transform:translate(-50%,-50%);
-	transform:translate(-50%,-50%);*/
+	-webkit-transform:translate(-50%,-50%);
+	transform:translate(-50%,-50%);
 	color: #fff;
 	background-color: rgba(0,26,15,.7);
+}
+.maxfixed-bg{
+	position: static;
+	transform: none;
 }
 
 .delpop{
@@ -2588,9 +2592,8 @@ display: inline-table;
 }
 
 .prod-cont .prodbase .g-title .sku{
-	position: absolute;
-	right: 0;
-	top: 0;
+	display: block;
+	margin-bottom: 10px;
 }
 
 .prod-cont .prodbase .g-title .sku:before{
