--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-B.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-B.vm
@@ -109,7 +109,7 @@ p.western {
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td>$!{ctx.customerAddressData.regin} </td>
+      <td>$!{ctx.customerAddressData.region} </td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -134,7 +134,7 @@ p.western {
     </tr>
     <tr>
       <td colspan="2">SHIP FROM: $!{ctx.warehouse}</td>
-      <td align="center">SHIP TO: $!{ctx.order.deliveryAddress.formattedAddress}</td>
+      <td align="center">SHIP TO: $!{ctx.shipto}</td>
     </tr>
      <tr>
       <td colspan="2">Pay Terms: $!{ctx.paymentTerms}</td>
@@ -148,7 +148,7 @@ p.western {
      <tr>
       <td width="67" height="7">Marks Numberse</td>
       <td width="236">Product name</td>
-      <td width="82">Total Weight<br> (Kg)</td>
+      <td width="82">Quantity<br> (Kg)</td>
       <td width="51"> Unit Price<br>(USD)</td>
       <td width="58"> Amount<br>(USD)</td>
 
@@ -399,7 +399,7 @@ p.western {
     <tr>
       <td colspan="2">SHIP FROM: $!{ctx.warehouse}</td>
      
-      <td>SHIP TO: $!{ctx.order.deliveryAddress.formattedAddress}</td>
+      <td>SHIP TO: $!{ctx.shipto}</td>
     </tr>
     
      <tr>
