modified releaseEmail context&vm

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
@@ -184,7 +184,7 @@ p.western {
 			(KGS) </td>
 		</tr>
 		#foreach( $item in ${ctx.append.productLists} )
-			#if (!$item.isTotal )
+			#if (!$item.isTotal() )
 			<tr>
 			  <td width="67" height="7" class="table3"> ${item.productCode} </td>
 			  <td width="206" >${item.productName} </td>
@@ -193,7 +193,14 @@ p.western {
 			  <td width="58" > $!{item.netWeight} </td>
 			  <td width="88"> $!{item.grossWeight} </td>
 			</tr>
-			
+			#else
+			<tr>
+			  <td colspan="3" width="383" height="3" class="table2"> Total </td>
+			  <td width="51"  class="table2"> ${item.quantity} </td>
+			  <td width="58"  class="table2"> $!{item.netWeight} </td>
+			  <td width="88"  class="table2"> $!{item.grossWeight} </td>
+			</tr>
+
 			#end
 		#end
 			#if(${ctx.append.totalData})
