--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -197,7 +197,7 @@ button{
 .maxtop_rig .userintro button:after{content:'';  position: absolute; bottom:-2px; right: 0; width: 40px; border-top:1px solid #096735; }
 .maxtop_rig .bansearch{position: absolute; top:0; right: 0; background:#eee; width: 200px; }
 .maxtop_rig .bansearch .form-control{height: 30px; line-height: 30px; background: transparent; border:none; box-shadow: none; font-size: 12px; }
-.maxtop_rig .bansearch .input-group-btn .btn{padding:0; width: 40px; height: 30px; color: #999}
+.maxtop_rig .bansearch .input-group-btn .btn{padding:0; width: 40px; height: 30px; color: #999; cursor: pointer;}
 
 /*searchlist*/
 .searchlist{position: absolute; top:20px; right: 42px; z-index: 9999; width: 200%; max-width: 350px; display: none;}
