--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
@@ -154,7 +154,7 @@ p.western {
 			(KGS) </td>
 		</tr>
 		 #foreach( $item in ${ctx.append.productLists} )
-			#if (!$item.isTotal )
+			#if (!$item.isTotal() )
 			<tr>
 			  <td width="67" height="7"> ${item.productCode} </td>
 			  <td width="206" > ${item.productName} </td>
