customer register email

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegisterNotificationAdminBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegisterNotificationAdminBody.vm
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Forget the password</title>
+<title>Notification the admin</title>
 <style type="text/css">
 	@page {
 	margin-right: 0.79in;
