--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegistrationAuditPassBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-customerRegistrationAuditPassBody.vm
@@ -21,22 +21,14 @@
 
 <body>
 <center>
-	<table class="font" width="600px" height="300px" frame="void">
+	<table class="font" width="600" height="300" frame="void">
 	<tbody>
-		<tr height="30px">
-			<td bgcolor="#006000">
-				&nbsp;
-			</td>
-		</tr>
-		<tr height="60px">
-			<td align="center">
-			<font size="5px" style="font-weight: 600" color="
-			#006000">
-				Registration audit passed
-			</font>
+		<tr height="30">
+			<td bgcolor="#006000">&nbsp;
 				
 			</td>
 		</tr>
+		
 		<tr>
 			<td>
 				${ctx.messages.getMessage('salutation', ${ctx.title},${ctx.displayName})},
@@ -44,13 +36,13 @@
 		</tr>
 		<tr>
 			<td>
-				${ctx.messages.thankYouForRegistering}
+				${ctx.messages.thankYou_customerpass}
 				
 			</td>
 		</tr>
 		<tr>
 			<td>
-			${ctx.messages.instructionsContactUs_new} <a href="mailto:customerservice@acerchem.com"><font color="#006000" size="2">customerservice@acerchem.com</font></a>
+			${ctx.messages.contactus_customerRegister} <a href="mailto:customerservice@ingredients4u.com"><font color="#006000" size="2">Customerservice@ingredients4u.com</font></a>
 				
 				
 			</td>
@@ -62,9 +54,9 @@
 				
 			</td>
 		</tr>
-		<tr height="30px">
-			<td bgcolor="#006000">
-				&nbsp;
+		<tr height="30">
+			<td bgcolor="#006000">&nbsp;
+				
 			</td>
 		</tr>
 		</tbody>
