--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-A.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-A.vm
@@ -150,7 +150,7 @@ p.western {
       <td width="67" height="7">Marks Numberse</td>
       <td width="236">Product name</td>
       <td width="82">Quantity<br> (Kg)</td>
-      <td width="51"> Unit Price<</td>
+      <td width="51"> Unit Price</td>
       <td width="58"> Amount</td>
 
     </tr>
