调整email显示大小写

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
@@ -394,7 +394,7 @@ p.western {
    		<tbody>
    			<tr>
    				<td>
-   					Packing: ${ctx.append.totalData.packingWeight}KG/DRUM, total:${ctx.append.totalData.packingCount} PACKAGES
+   					Packing: ${ctx.append.totalData.packingWeight}, Total:${ctx.append.totalData.packingCount} drums
    				</td>
    			</tr>
    			<tr>
