处理合同email的shipto

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-contractBody.vm
@@ -188,7 +188,10 @@ p.western {
         </tr>
         <tr>
           <td>
-            3.Deliver from: $!{ctx.warehouse} to: $!{ctx.order.deliveryAddress.formattedAddress}
+            3.Deliver from: $!{ctx.warehouse} to: 
+			#if(${ctx.deliveryMode} == "DDP")
+				$!{ctx.order.deliveryAddress.formattedAddress}
+			#end
           </td>
         </tr>
         <tr>
