--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-B.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-B.vm
@@ -460,7 +460,7 @@ p.western {
    			</tr>
    			<tr>
    				<td>
-   					PACKING: $!{ctx.upperCasePackageWeightArray},TOTAL PACKED IN $!{ctx.append.totalData.packingCount} PACKAGES
+   					PACKING: $!{ctx.upperCasePackageWeightArray}; TOTAL PACKED IN $!{ctx.append.totalData.packingCount} PACKAGES
    				</td>
    			</tr>
    			<tr>
