--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
@@ -407,7 +407,7 @@ p.western {
    		<tbody>
    			<tr>
    				<td>
-   					Packing: $!{ctx.append.totalData.packingWeight}, Total: $!{ctx.append.totalData.packingCount}drums
+   					Packing: $!{ctx.append.totalData.packingWeight}; Total: $!{ctx.classificationPackageTypeQuantityArray}
    				</td>
    			</tr>
    			<tr>
