--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -355,9 +355,10 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
         height: 30px; 
         line-height: 30px;
     }
-    .footer .maxfootnav{
-        padding-left: 10%;
-   }
+    .footer .maxadd{
+        padding-right: 5%;
+    }
+   
    .maxlatest .bansearch{
       max-width: 38%;
    }
